ajustes para api

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,3 +9,8 @@
 input{
     color-scheme: dark;
 }
+
+.rdp-root {
+    --rdp-accent-color: #3b82f6; /* Change the accent color to indigo. */
+    --rdp-accent-background-color: #3b83f665; 
+  }
