--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,6 +11,6 @@ input{
 }
 
 .rdp-root {
-    --rdp-accent-color: #3b82f6; 
-    --rdp-accent-background-color: #3b83f665; 
+    --rdp-accent-color: #c2410c; 
+    --rdp-accent-background-color: #fb923ca4; 
   }
